@@ -33,6 +33,7 @@ misc/pcap.c: LGPLv2+
 misc/pcap_openvas.h: LGPLv2+
 misc/plugutils.[c|h]: LGPLv2+
 misc/popen.[c|h]: LGPLv2+
+misc/scanneraux.h: GPLv2+
 misc/support.h: GPLv2+
 misc/www_funcs.c: GPLv2
 misc/www_funcs.h: LGPLv2+
